feat - Support resolving debug & release variant from Android Java project (#173)