@@ -247,18 +247,20 @@ public class BuildTargetService {
       if (sourceOutputDirs != null) {
         for (File sourceOutputDir : sourceOutputDirs) {
           outputPaths.add(new OutputPathItem(
-              sourceOutputDir.toURI().toString() + "?kind=source",
+              sourceOutputDir.toURI() + "?kind=source",
               OutputPathItemKind.DIRECTORY
           ));
         }
       }
 
-      File resourceOutputDir = sourceSet.getResourceOutputDir();
-      if (resourceOutputDir != null) {
-        outputPaths.add(new OutputPathItem(
-            resourceOutputDir.toURI().toString() + "?kind=resource",
-            OutputPathItemKind.DIRECTORY
-        ));
+      Set<File> resourceOutputDirs = sourceSet.getResourceOutputDirs();
+      if (resourceOutputDirs != null) {
+        for (File resourceOutputDir : resourceOutputDirs) {
+          outputPaths.add(new OutputPathItem(
+              resourceOutputDir.toURI() + "?kind=resource",
+              OutputPathItemKind.DIRECTORY
+          ));
+        }
       }
 
       OutputPathsItem item = new OutputPathsItem(btId, outputPaths);
@@ -286,7 +288,7 @@ public class BuildTargetService {
         List<String> artifacts = dep.getArtifacts().stream()
                 .filter(a -> "sources".equals(a.getClassifier()))
                 .map(a -> a.getUri().toString())
-                .collect(Collectors.toList());
+                .toList();
         sources.addAll(artifacts);
       }
 
@@ -488,68 +490,19 @@ public class BuildTargetService {
     TestResult testResult = new TestResult(StatusCode.OK);
     testResult.setOriginId(params.getOriginId());
     // running tests can trigger compilation that must be reported on
-    CompileProgressReporter compileProgressReporter = new CompileProgressReporter(client,
-            params.getOriginId(), getFullTaskPathMap());
+    CompileProgressReporter compileProgressReporter =
+        new CompileProgressReporter(client, params.getOriginId(), getFullTaskPathMap());
     Map<URI, Set<BuildTargetIdentifier>> groupedTargets =
         groupBuildTargetsByRootDir(params.getTargets());
+
     for (Map.Entry<URI, Set<BuildTargetIdentifier>> entry : groupedTargets.entrySet()) {
       // TODO ideally BSP would have a jvmTestEnv style testkind for executing tests, not scala.
       StatusCode statusCode;
       if (TestParamsDataKind.SCALA_TEST.equals(params.getDataKind())) {
-        // ScalaTestParams is for a list of classes only
-        ScalaTestParams testParams = JsonUtils.toModel(params.getData(), ScalaTestParams.class);
-        Map<BuildTargetIdentifier, Map<String, Set<String>>> testClasses = new HashMap<>();
-        for (ScalaTestClassesItem testClassesItem : testParams.getTestClasses()) {
-          Map<String, Set<String>> classesMethods = new HashMap<>();
-          for (String classNames : testClassesItem.getClasses()) {
-            classesMethods.put(classNames, null);
-          }
-          testClasses.put(testClassesItem.getTarget(), classesMethods);
-        }
-        statusCode = connector.runTests(entry.getKey(), testClasses, testParams.getJvmOptions(),
-            params.getArguments(), null, client, params.getOriginId(),
-            compileProgressReporter);
+        // existing logic for scala test (class level)
+        statusCode = runScalaTests(entry, params, compileProgressReporter);
       } else if ("scala-test-suites-selection".equals(params.getDataKind())) {
-        // ScalaTestSuites is for a list of classes + methods
-        // Since it doesn't supply the specific BuildTarget we require a single
-        // build target in the params and reject any request that doesn't match this
-        if (params.getTargets().size() != 1) {
-          LOGGER.warning("Test params with Test Data Kind " + params.getDataKind()
-              + " must contain only 1 build target");
-          statusCode = StatusCode.ERROR;
-        } else {
-          ScalaTestSuites testSuites = JsonUtils.toModel(params.getData(), ScalaTestSuites.class);
-          Map<String, String> envVars = null;
-          boolean argsValid = true;
-          if (testSuites.getEnvironmentVariables() != null) {
-            // arg is of the form KEY=VALUE
-            List<String[]> splitArgs = testSuites.getEnvironmentVariables()
-                .stream()
-                .map(arg -> arg.split("="))
-                .collect(Collectors.toList());
-            argsValid = splitArgs.stream().allMatch(arg -> arg.length == 2);
-            if (argsValid) {
-              envVars = splitArgs.stream().collect(Collectors.toMap(arg -> arg[0], arg -> arg[1]));
-            }
-          }
-          if (!argsValid) {
-            LOGGER.warning("Test params arguments must each be in the form KEY=VALUE. "
-                + testSuites.getEnvironmentVariables());
-            statusCode = StatusCode.ERROR;
-          } else {
-            Map<String, Set<String>> classesMethods = new HashMap<>();
-            for (ScalaTestSuiteSelection testSuiteSelection : testSuites.getSuites()) {
-              Set<String> methods = classesMethods
-                  .computeIfAbsent(testSuiteSelection.getClassName(), k -> new HashSet<>());
-              methods.addAll(testSuiteSelection.getTests());
-            }
-            Map<BuildTargetIdentifier, Map<String, Set<String>>> testClasses = new HashMap<>();
-            testClasses.put(params.getTargets().get(0), classesMethods);
-            statusCode = connector.runTests(entry.getKey(), testClasses, testSuites.getJvmOptions(),
-              params.getArguments(), envVars, client, params.getOriginId(),
-              compileProgressReporter);
-          }
-        }
+        statusCode = runScalaTestSuitesSelection(entry, params, compileProgressReporter);
       } else {
         LOGGER.warning("Test Data Kind " + params.getDataKind() + " not supported");
         statusCode = StatusCode.ERROR;
@@ -559,7 +512,75 @@ public class BuildTargetService {
         testResult.setStatusCode(statusCode);
       }
     }
+
     return testResult;
+  }
+
+  private StatusCode runScalaTests(
+      Map.Entry<URI, Set<BuildTargetIdentifier>> entry,
+      TestParams params,
+      CompileProgressReporter compileProgressReporter
+  ) {
+    // ScalaTestParams is for a list of classes only
+    ScalaTestParams testParams = JsonUtils.toModel(params.getData(), ScalaTestParams.class);
+    Map<BuildTargetIdentifier, Map<String, Set<String>>> testClasses = new HashMap<>();
+    for (ScalaTestClassesItem testClassesItem : testParams.getTestClasses()) {
+      Map<String, Set<String>> classesMethods = new HashMap<>();
+      for (String classNames : testClassesItem.getClasses()) {
+        classesMethods.put(classNames, null);
+      }
+      testClasses.put(testClassesItem.getTarget(), classesMethods);
+    }
+    return connector.runTests(entry.getKey(), testClasses, testParams.getJvmOptions(),
+        params.getArguments(), null, client, params.getOriginId(),
+        compileProgressReporter);
+  }
+
+  private StatusCode runScalaTestSuitesSelection(
+      Map.Entry<URI, Set<BuildTargetIdentifier>> entry,
+      TestParams params,
+      CompileProgressReporter compileProgressReporter
+  ) {
+    // ScalaTestSuites is for a list of classes + methods
+    // Since it doesn't supply the specific BuildTarget we require a single
+    // build target in the params and reject any request that doesn't match this
+    if (params.getTargets().size() != 1) {
+      LOGGER.warning("Test params with Test Data Kind " + params.getDataKind()
+          + " must contain only 1 build target");
+      return StatusCode.ERROR;
+    } else {
+      ScalaTestSuites testSuites = JsonUtils.toModel(params.getData(), ScalaTestSuites.class);
+      Map<String, String> envVars = null;
+      boolean argsValid = true;
+      if (testSuites.getEnvironmentVariables() != null) {
+        // arg is of the form KEY=VALUE
+        List<String[]> splitArgs = testSuites.getEnvironmentVariables()
+            .stream()
+            .map(arg -> arg.split("="))
+            .toList();
+        argsValid = splitArgs.stream().allMatch(arg -> arg.length == 2);
+        if (argsValid) {
+          envVars = splitArgs.stream().collect(Collectors.toMap(arg -> arg[0], arg -> arg[1]));
+        }
+      }
+      if (!argsValid) {
+        LOGGER.warning("Test params arguments must each be in the form KEY=VALUE. "
+            + testSuites.getEnvironmentVariables());
+        return StatusCode.ERROR;
+      } else {
+        Map<String, Set<String>> classesMethods = new HashMap<>();
+        for (ScalaTestSuiteSelection testSuiteSelection : testSuites.getSuites()) {
+          Set<String> methods = classesMethods
+              .computeIfAbsent(testSuiteSelection.getClassName(), k -> new HashSet<>());
+          methods.addAll(testSuiteSelection.getTests());
+        }
+        Map<BuildTargetIdentifier, Map<String, Set<String>>> testClasses = new HashMap<>();
+        testClasses.put(params.getTargets().get(0), classesMethods);
+        return connector.runTests(entry.getKey(), testClasses, testSuites.getJvmOptions(),
+            params.getArguments(), envVars, client, params.getOriginId(),
+            compileProgressReporter);
+      }
+    }
   }
 
   /**
